# arakawa

./: .lefthookrc  404.html  README.md  index.html  lefthook.yml  objects.inv  quickstart_report.html  sitemap.xml  versions.json
.github/workflows/: build.yml  docs.yml  node.yml  npm.yml  publish.yml  pypi.yml  python.yml
0.0.10/: quickstart_report.html  sitemap.xml
0.0.10/blocks/: report.html
0.0.10/quickstart/: index.html
0.0.10/search/: search_index.json
0.0.10a1/: index.html  quickstart_report.html  sitemap.xml
0.0.10a1/blocks/: report.html
0.0.10a1/quickstart/: index.html
0.0.11/: quickstart_report.html  sitemap.xml
0.0.11/blocks/: report.html
0.0.11/quickstart/: index.html
0.0.12/: quickstart_report.html  sitemap.xml
0.0.12/blocks/: report.html
0.0.12/quickstart/: index.html
0.0.12a1/: quickstart_report.html  sitemap.xml
0.0.12a1/blocks/: report.html
0.0.12a1/quickstart/: index.html
0.0.12a1/search/: search_index.json
0.0.13/: quickstart_report.html  sitemap.xml
0.0.13/blocks/: report.html
0.0.13/installing-arakawa/: index.html
0.0.13/quickstart/: index.html
0.0.14/: objects.inv  quickstart_report.html  sitemap.xml
0.0.14/blocks/: report.html
0.0.15/: quickstart_report.html
0.0.15a1/: index.html  quickstart_report.html  sitemap.xml
0.0.16/: 404.html  quickstart_report.html  sitemap.xml
0.0.17/: quickstart_report.html  sitemap.xml
0.0.18/: 404.html  index.html  quickstart_report.html  sitemap.xml
0.0.9/: quickstart_report.html  sitemap.xml
0.0.9a5/: 404.html  index.html  quickstart_report.html  sitemap.xml
0.0.9a6/: 404.html  quickstart_report.html
0.0.9a7/: quickstart_report.html  sitemap.xml
0.1.0/: 404.html  index.html  objects.inv  quickstart_report.html
0.1.0a1/: quickstart_report.html  sitemap.xml
0.2.0/: quickstart_report.html  sitemap.xml
0.2.1/: 404.html  index.html  objects.inv  quickstart_report.html  sitemap.xml
0.3.0/: 404.html  index.html  quickstart_report.html  sitemap.xml
0.4.0/: quickstart_report.html  sitemap.xml
0.4.1/: index.html  quickstart_report.html
0.4.2/: 404.html  quickstart_report.html  sitemap.xml
blocks/: report.html
docs/: .gitignore  Taskfile.yml  convert_to_py_version.py  mkdocs.yml  nbbuild.sh  nbclear.sh  pyproject.toml  requirements.txt
docs/docs/: index.md  installing-arakawa.md  quickstart.ipynb
docs/docs/blocks/: control-blocks.ipynb  display-blocks.ipynb  layout-blocks.ipynb  overview.ipynb
docs/docs/reference/: reports.md
docs/docs/reference/control-blocks/: choices.ipynb  choices.md  color.ipynb  color.md  datetimes.ipynb  datetimes.md  file.ipynb  file.md  numbers.ipynb  numbers.md  switch.md  text.md  texts.ipynb  texts.md  validation.ipynb
docs/docs/reference/display-blocks/: data.ipynb  embeds.ipynb  network.ipynb  plots.ipynb  text.ipynb
docs/docs/reference/layout-blocks/: compute.ipynb  group.ipynb  page.ipynb  select.ipynb  toggle.ipynb
docs/docs/reports/: jupyter-integration.ipynb  overview.ipynb  styling.ipynb
installing-arakawa/: index.html
public-docs/: README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
public-docs/docs/: index.md  installing-arakawa.md  quickstart.ipynb
public-docs/docs/blocks/: display-blocks.ipynb  layout-blocks.ipynb  overview.ipynb
public-docs/docs/reference/display-blocks/: data.ipynb  embeds.ipynb  plots.ipynb  text.ipynb
public-docs/docs/reference/layout-blocks/: group.ipynb  page.ipynb  select.ipynb  toggle.ipynb
public-docs/docs/reports/: jupyter-integration.ipynb  overview.ipynb  styling.ipynb
python-client/: .gitignore  README.md  Taskfile.yml  pyproject.toml  report.html  requirements.txt
python-client/src/arakawa/: __init__.py  builtins.py  exceptions.py  optional_libs.py  settings.py  types.py  utils.py  versioning.py
python-client/src/arakawa/blocks/: __init__.py  asset.py  base.py  controls.py  empty.py  layout.py  misc_blocks.py  mixins.py  network.py  text.py  utils.py  wrappers.py
python-client/src/arakawa/client/: __init__.py  utils.py
python-client/src/arakawa/common/: __init__.py  ar_types.py  datafiles.py  df_processor.py  dp_types.py  ops_utils.py  utils.py  viewxml_utils.py
python-client/src/arakawa/ipython/: environment.py  exceptions.py  templates.py  utils.py
python-client/src/arakawa/processors/: __init__.py  api.py  file_store.py  processors.py  types.py
python-client/src/arakawa/resources/: mime.types
python-client/src/arakawa/resources/html_templates/: head_chrome.html  head_chrome.html.j2  ipython_base.html  ipython_base.html.j2  ipython_template.html copy.j2  ipython_template.html.j2  local_template.html.j2
python-client/src/arakawa/resources/view_resources/: full_schema.rnc  full_schema.rng  local_post_process.xslt
python-client/src/arakawa/schemas/: __init__.py  asset.py  base.py  controls.py  fields.py  layout.py  misc_blocks.py  mixins.py  text.py
python-client/src/arakawa/view/: __init__.py  asset_writers.py  pydantic_visitor.py  view_blocks.py  visitors.py  xml_visitor.py
python-client/tests/: __init__.py  builtins.py  conftest.py  parser.py  test_builtins.py  test_local_report.ipynb  test_optional_libs.py  test_versioning.py
python-client/tests/blocks/: test_controls.py  test_layout.py  test_misc_blocks.py
python-client/tests/client/views/: test_builtins.py  test_misc.py  test_views.py
python-client/tests/common/: _test_df_processor_3.py  test_df_processor.py  test_df_processor_2.py  test_misc.py
python-client/tests/view/: test_asset_writers.py
python-client/tests/views/: test_views.py
quickstart/: index.html
reports/: my_report.html
search/: search_index.json
web-components/: .gitignore  README.md  Taskfile.yml  base.tailwind.config.js  base.vite.config.ts  env.d.ts  eslint.config.mjs  eslint.config.ts  formkit.config.ts  formkit.theme.ts  global.ts  js-only.d.ts  local-report.tailwind.config.js  local-report.vite.config.ts  package-lock.json  package.json  rollup-plugin-vue-esm.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
(+871 files in other folders)
