[project]
name = "arakawa-docs"
version = "0.0.0"
description = "Arakawa Docs"
requires-python = ">=3.10"
authors = []
dependencies = [
    "arakawa[all]",
    "bokeh-sampledata>=2025.0",
    "jupyterlab>=4.4.2",
    "mdx-truly-sane-lists>=1.3",
    "mike>=2.1.3",
    "mkdocs-material>=9.7.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings[python]>=1.0.0",
    "mknotebooks>=0.8.0,<0.9.0",
    "nbstripout>=0.8.2",
    "nltk>=3.9.2",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas-datareader>=0.10.0,<0.11.0",
    "pytrends>=4.9.2",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]

[tool.uv.sources]
arakawa = { path = "../python-client" }
