[project]
name = "arakawa-docs"
version = "0.0.0"
description = "Arakawa Docs"
requires-python = ">=3.10"
authors = []
dependencies = [
    "arakawa[all]",
    "bokeh-sampledata>=2025.0",
    "jupyterlab>=4.4.2",
    "mdx-truly-sane-lists>=1.3",
    "mike>=2.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-redirects>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "mknotebooks>=0.8.0,<0.9.0",
    "nbstripout>=0.9.1",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "packaging>=26.2",
    "pandas-datareader>=0.10.0,<0.11.0",
    "pytrends>=4.9.2",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]

[tool.uv.sources]
arakawa = { path = "../python-client" }
