[project]
name = "arakawa-docs"
version = "0.1.0"
description = "Arakawa Docs"
requires-python = ">=3.10,<3.12.0"
authors = []
dependencies = [
    "arakawa[plotting]",
    "mkdocs-redirects>=1.2.1",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-material>=9.5.39",
    "mknotebooks>=0.8.0,<0.9.0",
    "jupyterlab>=4.2.5",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "SQLAlchemy>=2.0.35",
    "pandas-datareader>=0.10.0,<0.11.0",
    "pytrends>=4.9.2",
    "nltk>=3.9.1",
]

[tool.uv.sources]
arakawa = { path = "../python-client" }
