[project]
name = "arakawa"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "altair~=5.4",
  "base64io~=1.0",
  "chardet~=5.2",
  "dominate~=2.9",
  "ipynbname~=2024.1",
  "ipython~=8.13",
  "jinja2~=3.0",
  "loguru~=0.7",
  "lxml~=5.3",
  "micawber~=0.5",
  "multimethod~=1.10",
  "pandas~=2.2",
  "pyarrow~=17.0",
  "semver>=3.0",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
plotting = [
  "bokeh>=3.4.0,<3.5.0",
  "folium~=0.17",
  "matplotlib~=3.9",
  "plotly~=5.24",
]

[project.urls]
Repository = "https://github.com/ninoseki/arakawa/"

[build-system]
requires = ["hatchling==1.25.0", "uv-dynamic-versioning==0.2.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
exclude = ["images/", ".vscode/", "tests/"]

[dependency-groups]
dev = [
  "pytest~=8.3.3",
  "pytest-pretty~=1.2.0",
  "pytest-randomly~=3.15.0",
  "ruff~=0.7.2",
  "vega-datasets~=0.9.0",
  "pytest-datadir~=1.5.0",
  "pytest-timeout~=2.3.1",
  "uv-sort~=0.4.0",
  "build~=1.2.2",
  "twine~=5.1.1",
  "glom>=23.5.0",
  "pytest-github-actions-annotate-failures>=0.2.0",
  "types-lxml>=2024.9.16",
]

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "FA",  # flake8-future-annotations
  "I",   # isort
  "N",   # pep8-naming
  "PT",  # flake8-pytest-style
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = ["E501", "PT012"]
