[project]
name = "arakawa"
dynamic = ["version"]
description = "Build interactive reports in seconds using Python"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "altair~=5.4",
  "base64io~=1.0",
  "chardet~=5.2",
  "dominate~=2.9",
  'eval_type_backport~=0.2;python_version<"3.10"',
  "ipynbname~=2024.1",
  "ipython~=8.13",
  "jinja2~=3.0",
  "loguru~=0.7",
  "micawber~=0.5",
  "multimethod~=2.0",
  "pandas~=2.2",
  "pyarrow~=18.1",
  "pydantic~=2.10",
  "pyhumps~=3.8",
  "semver~=3.0",
  'typing-extensions~=4.12;python_version<"3.11"',
]

[project.optional-dependencies]
plotting = [
  "bokeh>=3.4.0,<3.5.0",
  "folium~=0.18",
  "matplotlib~=3.9",
  "plotly~=5.24",
]

[project.urls]
Repository = "https://github.com/ninoseki/arakawa/"

[build-system]
requires = ["hatchling>=1.26", "uv-dynamic-versioning==0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
exclude = ["images/", ".vscode/", "tests/"]
artifacts = [
  "src/arakawa/resources/html_templates/local-report.css",
  "src/arakawa/resources/html_templates/local-report.js",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "src/arakawa/resources/html_templates/local-report.css",
  "src/arakawa/resources/html_templates/local-report.js",
]

[dependency-groups]
dev = [
  "pytest~=8.3.4",
  "pytest-pretty~=1.2.0",
  "pytest-randomly~=3.16.0",
  "ruff~=0.9.1",
  "vega-datasets~=0.9.0",
  "pytest-datadir~=1.5.0",
  "pytest-timeout~=2.3.1",
  "uv-sort~=0.4.0",
  "build~=1.2.2",
  "glom>=24.11.0",
  "pytest-github-actions-annotate-failures>=0.2.0",
  "boltons>=24.1.0",
]

[tool.ruff.lint]
select = [
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "N",    # pep8-naming
  "PERF", # Perflint
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
ignore = ["E501", "PT012"]
